refactor(core): modernize gateway event handlers, components, and interactions