@@ -25,7 +25,6 @@ import net.dv8tion.jda.internal.utils.Checks;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import javax.annotation.CheckReturnValue;
 import javax.annotation.Nonnull;
@@ -169,7 +168,7 @@ public interface IAutoCompleteCallback extends Interaction {
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The provided strings will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The provided strings will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user, each limited to {@value OptionData#MAX_CHOICE_NAME_LENGTH} characters
@@ -188,14 +187,14 @@ public interface IAutoCompleteCallback extends Interaction {
     @CheckReturnValue
     default AutoCompleteCallbackAction replyChoiceStrings(@Nonnull String... choices) {
         return replyChoices(
-                Arrays.stream(choices).map(it -> new Command.Choice(it, it)).collect(Collectors.toList()));
+                Arrays.stream(choices).map(it -> new Command.Choice(it, it)).toList());
     }
 
     /**
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The provided strings will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The provided strings will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user, each limited to {@value OptionData#MAX_CHOICE_NAME_LENGTH} characters
@@ -214,14 +213,14 @@ public interface IAutoCompleteCallback extends Interaction {
     @CheckReturnValue
     default AutoCompleteCallbackAction replyChoiceStrings(@Nonnull Collection<String> choices) {
         return replyChoices(
-                choices.stream().map(it -> new Command.Choice(it, it)).collect(Collectors.toList()));
+                choices.stream().map(it -> new Command.Choice(it, it)).toList());
     }
 
     /**
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The string values of the provided longs will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The string values of the provided longs will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user
@@ -241,14 +240,14 @@ public interface IAutoCompleteCallback extends Interaction {
     default AutoCompleteCallbackAction replyChoiceLongs(@Nonnull long... choices) {
         return replyChoices(Arrays.stream(choices)
                 .mapToObj(it -> new Command.Choice(String.valueOf(it), it))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The string values of the provided longs will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The string values of the provided longs will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user
@@ -268,14 +267,14 @@ public interface IAutoCompleteCallback extends Interaction {
     default AutoCompleteCallbackAction replyChoiceLongs(@Nonnull Collection<Long> choices) {
         return replyChoices(choices.stream()
                 .map(it -> new Command.Choice(String.valueOf(it), it))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The string values of the provided doubles will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The string values of the provided doubles will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user
@@ -295,14 +294,14 @@ public interface IAutoCompleteCallback extends Interaction {
     default AutoCompleteCallbackAction replyChoiceDoubles(@Nonnull double... choices) {
         return replyChoices(Arrays.stream(choices)
                 .mapToObj(it -> new Command.Choice(String.valueOf(it), it))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
      * Reply with up to {@value OptionData#MAX_CHOICES} choices which can be picked from by the user.
      * <br>The user may continue writing inputs instead of using one of your choices.
      *
-     * <p>The string values of the provided doubles will be used as value and name for the {@link net.dv8tion.jda.api.interactions.commands.Command.Choice Choices}.
+     * <p>The string values of the provided doubles will be used as value and name for the {@link Command.Choice Choices}.
      *
      * @param  choices
      *         The choice suggestions to present to the user
@@ -322,6 +321,6 @@ public interface IAutoCompleteCallback extends Interaction {
     default AutoCompleteCallbackAction replyChoiceDoubles(@Nonnull Collection<Double> choices) {
         return replyChoices(choices.stream()
                 .map(it -> new Command.Choice(String.valueOf(it), it))
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
