@@ -30,7 +30,6 @@ import org.jetbrains.annotations.Contract;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -273,7 +272,7 @@ public interface CommandInteractionPayload extends Interaction {
     @Nonnull
     default List<OptionMapping> getOptionsByName(@Nonnull String name) {
         Checks.notNull(name, "Name");
-        return getOptions().stream().filter(opt -> opt.getName().equals(name)).collect(Collectors.toList());
+        return getOptions().stream().filter(opt -> opt.getName().equals(name)).toList();
     }
 
     /**
@@ -295,7 +294,7 @@ public interface CommandInteractionPayload extends Interaction {
     @Nonnull
     default List<OptionMapping> getOptionsByType(@Nonnull OptionType type) {
         Checks.notNull(type, "Type");
-        return getOptions().stream().filter(it -> it.getType() == type).collect(Collectors.toList());
+        return getOptions().stream().filter(it -> it.getType() == type).toList();
     }
 
     /**
